--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,5 @@
   "settings": {},
   "editor.formatOnSave": true,
   "prettier.singleQuote": true,
-  "prettier.trailingComma": true,
+  "prettier.trailingComma": "all",
 }
