--- a/package.json
+++ b/package.json
@@ -62,16 +62,16 @@
     "@aws-cdk/aws-apigateway": "^1.75.0",
     "@aws-cdk/aws-iam": "^1.75.0",
     "@aws-cdk/core": "^1.75.0",
+    "alps-unified-ts": "^0.0.20",
     "boxen": "^4.2.0",
     "chalk": "^4.1.0",
-    "unified": "https://github.com/mamund/alps-unified",
     "yamljs": "^0.3.0",
     "yargs": "16.1.1"
   },
   "bundledDependencies": [
+    "alps-unified-ts",
     "boxen",
     "chalk",
-    "unified",
     "yamljs",
     "yargs"
   ],
