--- a/package.json
+++ b/package.json
@@ -61,18 +61,10 @@
     "@aws-cdk/aws-apigateway": "^1.75.0",
     "@aws-cdk/aws-iam": "^1.75.0",
     "@aws-cdk/core": "^1.75.0",
-    "alps-unified-ts": "^0.0.20",
-    "boxen": "^4.2.0",
-    "chalk": "^4.1.0",
-    "yamljs": "^0.3.0",
-    "yargs": "16.1.1"
+    "alps-unified-ts": "^0.0.20"
   },
   "bundledDependencies": [
-    "alps-unified-ts",
-    "boxen",
-    "chalk",
-    "yamljs",
-    "yargs"
+    "alps-unified-ts"
   ],
   "keywords": [
     "alps",
@@ -118,6 +110,13 @@
   "jsii": {
     "outdir": "dist",
     "targets": {
+      "java": {
+        "package": "com.github.mmuller88.cdkAlpsSpecRestApi",
+        "maven": {
+          "groupId": "com.github.mmuller88",
+          "artifactId": "cdk-alps-spec-rest-api"
+        }
+      },
       "python": {
         "distName": "cdk-alps-spec-rest-api",
         "module": "cdk_alps_spec_rest_api"
